# x402Guard

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml  railway.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/00-repo-setup/: 00-01-PLAN.md  00-01-SUMMARY.md  00-02-PLAN.md  00-02-SUMMARY.md  00-03-PLAN.md  00-03-SUMMARY.md  00-04-PLAN.md  00-04-SUMMARY.md  00-05-PLAN.md  00-05-SUMMARY.md
.planning/phases/01-core-x402-proxy/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md
.planning/phases/02-guardrails-engine/: 02-01-PLAN.md  02-01-SUMMARY.md
.planning/phases/03-revoke-audit-solana/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  (+3 more)
.planning/promotion/: content-strategy.md  devto-article-guardrails.md  outreach-messages.md
.planning/research/: agent-frameworks.md  eip7702-session-keys.md  solana-guard.md  x402-protocol.md
beta-test/agent/: .env.example
dashboard/: .env.example  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json
dashboard/e2e/: dashboard.spec.ts  landing.spec.ts  login.spec.ts
dashboard/src/: middleware.ts
docker/: init.sql
docs/: DEPLOY.md
examples/: .gitignore  README.md
examples/cod3x/: README.md  package.json  tsup.config.ts
examples/core/: README.md  package.json
examples/elizaos/: README.md  package.json  tsconfig.json  tsup.config.ts
examples/openclaw/: README.md  openclaw.plugin.json  package.json  tsconfig.json
examples/virtuals/: README.md  conftest.py  pyproject.toml
examples/virtuals/demo/: demo_agent.py  demo_worker.py
examples/virtuals/src/x402guard_game/: __init__.py  client.py  errors.py  functions.py  types.py
examples/virtuals/tests/integration/: test_proxy.py
examples/virtuals/tests/unit/: test_client.py  test_errors.py  test_functions.py
proxy/: Cargo.toml  Dockerfile  README.md
proxy/migrations/: 001_create_tables.sql  002_create_audit_log.sql  003_add_solana_event_types.sql  004_spend_aggregation_rpc.sql  005_enable_rls.sql
proxy/src/: config.rs  error.rs  main.rs  router.rs  state.rs
proxy/src/handlers/: agents.rs  guardrail_rules.rs  health.rs  mod.rs  proxy.rs  session_keys.rs  solana_vault.rs
proxy/src/middleware/: api_key.rs  eip7702.rs  guardrails.rs  mod.rs  nonce.rs  rate_limit.rs
proxy/src/middleware/x402/: mod.rs  types.rs  verify.rs
proxy/src/models/: agent.rs  audit_event.rs  guardrail.rs  mod.rs  session_key.rs
proxy/src/repo/: agents.rs  audit_log.rs  guardrails.rs  mod.rs  session_keys.rs  spend_ledger.rs
proxy/src/services/: audit_writer.rs  mod.rs  revocation.rs  solana_rpc.rs
solana/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
solana/migrations/: deploy.ts
solana/programs/x402-guard/: Cargo.toml
solana/programs/x402-guard/src/: constants.rs  errors.rs  lib.rs
solana/programs/x402-guard/src/instructions/: close_vault.rs  deposit.rs  guarded_withdraw.rs  initialize_vault.rs  mod.rs  revoke_agent.rs  update_rules.rs
solana/programs/x402-guard/src/state/: vault.rs
solana/tests/: x402-guard.ts
tasks/: SESSION_PROMPT.md  lessons.md  todo.md
(+130 files in other folders)
