[workspace]
resolver = "2"
members = ["proxy"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/x402guard/x402guard-dev"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }

# Serialization
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto / Ethereum
alloy = { version = "0.12", features = ["sol-types", "signers", "signer-local"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Config
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Redis
redis = { version = "0.27", features = ["tokio-comp"] }

# URL parsing
url = "2"

# Encoding
base64 = "0.22"
hex = "0.4"

# Crypto / Solana (pure Rust — no C deps, no serde conflicts)
sha2 = "0.10"
curve25519-dalek = { version = "4", default-features = false }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono", "json"] }

# Testing
tokio-test = "0.4"
