[package]
name = "x402-guard-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance non-custodial x402 safety proxy with EIP-7702 session keys and guardrails"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
alloy = { workspace = true }
reqwest = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
