[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x402guard-game-plugin"
version = "0.1.0"
description = "Virtuals Protocol GAME SDK plugin for x402Guard proxy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
]

[project.optional-dependencies]
game = ["game-python-sdk"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/x402guard_game"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
